# agent-flight-recorder

./: .gitignore  CHANGELOG.md  Makefile  README.md  demo.tape  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
docs/: launch-summary.md
docs/superpowers/plans/: 2026-07-05-agent-flight-recorder.md
docs/superpowers/specs/: 2026-07-05-agent-flight-recorder-design.md
examples/two-agent-app/: README.md  app.py  requirements.txt  stub_llm.py
skills/agent-eval-scaffold/: SKILL.md
skills/agent-eval-scaffold/templates/: conftest.py  evals-README.md  evals-ci.yml  harness.py  smoke.jsonl  test_golden.py
skills/audit-log/: SKILL.md
skills/audit-log/scripts/: chained_log.py  verify_chain.py
skills/audit-log/templates/: langgraph_integration.py  plain_python.py
skills/otel-agent-tracing/: SKILL.md
skills/otel-agent-tracing/assets/: docker-compose.yml  otel-collector-config.yaml
skills/otel-agent-tracing/references/: conformance.md  first-trace.md  semconv.md
skills/otel-agent-tracing/templates/: langgraph_tracing.py  otel_setup.py
skills/trace-triage/: SKILL.md
skills/trace-triage/references/: attribute-mapping.md
skills/trace-triage/scripts/: otlp_to_triage.py
tests/: test_audit_chain.py  test_eval_scaffold.py  test_example_app.py  test_hygiene.py  test_otel_templates.py  test_otlp_converter.py  test_packaging.py  test_round_trip.py  test_skill_format.py  test_verify_chain.py
tests/fixtures/: otlp_sample.json
tests/golden/: round_trip_report.md
(+1 files in other folders)
