[project]
name = "agent-flight-recorder"
version = "0.1.0"
description = "Claude Code skills for agent observability and tamper-evident audit trails"
requires-python = ">=3.11"
license = { text = "MIT" }

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "pyyaml>=6",
    "opentelemetry-sdk>=1.30,<2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30,<2",
    "langgraph",
    "agent-triage>=0.1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.coverage.run]
omit = ["*/evals-ci*", "*/__pycache__/*"]
